[project]
name = "double-pendulum-prediction"
version = "0.1.0"
description = "A package for double pendulum prediction"
authors = [
    {name = "Lars Heimann", email = "lars@larsheimann.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
